--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -9,7 +9,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="53dp"
-        android:layout_weight="0"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:padding="16dp"
@@ -24,10 +23,10 @@
             android:src="@drawable/back_button" />
     </LinearLayout>
 
-    <!-- Content Layout (Image Preview and Text) -->
+    <!-- Content Layout (Image Preview and Matched Items Container) -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="491dp"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="center"
         android:orientation="vertical">
@@ -42,23 +41,20 @@
             android:background="@color/black"
             android:scaleType="fitXY" />
 
-        <!-- TextView for recognized text -->
-        <TextView
-            android:id="@+id/textview"
+        <!-- Container for Matched Items -->
+        <LinearLayout
+            android:id="@+id/matchedItemsContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="16dp"
-            android:textColor="@android:color/black"
-            android:textSize="16sp"
-            android:visibility="gone" />
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:padding="16dp"/>
     </LinearLayout>
 
     <!-- Bottom Buttons (Scan and Upload) -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0"
         android:gravity="center"
         android:orientation="vertical"
         android:layout_marginBottom="30dp">
