--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFF9C4"
     tools:context="com.google.ar.core.examples.java.helloar.HelloArActivity">
+
+
 
   <android.opengl.GLSurfaceView
       android:id="@+id/surfaceview"
@@ -25,13 +28,37 @@
       android:layout_height="fill_parent"
       android:layout_gravity="top"/>
 
+  <View
+      android:id="@+id/top_black_overlay"
+      android:layout_width="match_parent"
+      android:layout_height="90dp"
+      android:layout_alignParentTop="true"
+      android:background="#66000000"/>
+
+  <View
+      android:id="@+id/bottom_black_overlay"
+      android:layout_width="match_parent"
+      android:layout_height="110dp"
+      android:layout_alignParentBottom="true"
+      android:background="#66000000"/>
+
+  <ImageButton
+      android:id="@+id/back_button"
+      android:layout_width="32dp"
+      android:layout_height="32dp"
+      android:layout_alignParentStart="true"
+      android:layout_marginStart="22dp"
+      android:layout_marginTop="30dp"
+      android:background="@android:color/transparent"
+      android:src="@drawable/ic_back_arrow" />
+
   <ImageButton
       android:id="@+id/settings_button"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_width="35dp"
+      android:layout_height="38dp"
       android:layout_alignParentEnd="true"
-      android:layout_alignParentTop="true"
-      android:layout_margin="25dp"
+      android:layout_marginEnd="17dp"
+      android:layout_marginTop="30dp"
       android:src="@drawable/ic_settings"
       android:background="@android:color/transparent"/>
 
@@ -39,18 +66,25 @@
       android:id="@+id/dimensionTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="模型尺寸"
-      android:textColor="@android:color/white"
-      android:layout_alignParentTop="true"
-      android:layout_centerHorizontal="true" />
+      android:layout_centerHorizontal="true"
+      android:layout_marginTop="24dp"
+      android:text="Model Dimensions"
+      android:textColor="#FFFFF1"
+      android:padding="8dp"
+      android:elevation="4dp"
+      android:textSize="14sp" />
 
   <Button
       android:id="@+id/delete_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="delete model"
       android:layout_alignParentBottom="true"
       android:layout_centerHorizontal="true"
-      android:layout_marginBottom="20dp" />
+      android:layout_marginBottom="50dp"
+      android:padding="12dp"
+      android:background="@drawable/rounded_yellow_button"
+      android:text="Delete Model"
+      android:textColor="#000000"
+      android:textStyle="bold" />
 
 </RelativeLayout>
