--- a/UIAppliction_merge_2/MCSP-A2-project-login/app/src/main/res/layout/activity_login.xml
+++ b/UIAppliction_merge_2/MCSP-A2-project-login/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/btn_login"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_password"
+        app:layout_constraintTop_toBottomOf="@+id/verification_layout"
         app:layout_constraintVertical_bias="0.164" />
 
     <com.example.uiappliction.Utils.ClearEditText
@@ -69,6 +69,39 @@
         app:layout_constraintTop_toBottomOf="@+id/textView_username"
         app:layout_constraintVertical_bias="0.083"
         tools:ignore="SpeakableTextPresentCheck" />
+
+    <LinearLayout
+        android:id="@+id/verification_layout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_password"
+        android:layout_marginTop="16dp">
+
+        <EditText
+            android:id="@+id/editText_verification_code"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="Please enter verification code"
+            android:inputType="number"
+            android:padding="10dp" />
+
+        <Button
+            android:id="@+id/button_send_verification_code"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="send code"
+            android:backgroundTint="@color/teal_700"
+            android:textColor="@android:color/white"
+            android:padding="10dp" />
+    </LinearLayout>
+
 
     <com.example.uiappliction.Utils.SubmitButton
         android:id="@+id/btn_login"
