--- a/UIAppliction_merge_2/MCSP-A2-project-login/app/src/main/res/layout/activity_shake.xml
+++ b/UIAppliction_merge_2/MCSP-A2-project-login/app/src/main/res/layout/activity_shake.xml
@@ -15,34 +15,72 @@
         android:textSize="24sp" />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/ShakeTip"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="120dp"
         android:layout_below="@id/Shaketitle"
         android:orientation="vertical"
         android:padding="16dp">
-
-        <com.kongzue.stacklabelview.StackLabel xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/stackLabelView"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            app:deleteButton="false"
-            app:selectMode="true"
-            app:maxSelectNum="1"
-            app:itemMargin="4dp"
-
-            app:paddingHorizontal="12dp"
-            app:paddingVertical="8dp"
-            app:textColor="#e6000000"
-            app:textSize="12dp" />
 
         <TextView
             android:id="@+id/randomNumberText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Shake to get a random number"
+            android:text="Shake to get a random choice"
             android:textColor="#000000"
             android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/startShakeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="#FFDB58"
+            android:text="Shake"
+            android:layout_gravity="center" />
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/menu_item_image"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/food_image"
+        android:layout_below="@id/ShakeTip"
+        android:contentDescription="Menu item image"
+        android:layout_gravity="center_vertical"
+        android:visibility="gone"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="120dp"
+        android:layout_below="@id/ShakeTip"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/shake_item_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Item Name"
+            android:textColor="@android:color/black"
+            android:textSize="16sp"
+            android:visibility="gone"/>
+
+        <Button
+            android:id="@+id/shake_item_view_ar_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:backgroundTint="#E3AA4D"
+            android:text="View AR"
+            android:textSize="14sp"
+            android:visibility="gone" />
+
+
     </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
